--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -47,7 +47,7 @@
                                     <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                 </wm-gridcolumn>
                             </wm-gridrow>
-                            <wm-gridrow name="gridrow1">
+                            <wm-gridrow name="gridrow1" padding="2em unset">
                                 <wm-gridcolumn columnwidth="4" name="gridcolumn22_1"></wm-gridcolumn>
                                 <wm-gridcolumn name="gridcolumn1" columnwidth="4" horizontalalign="left">
                                     <wm-form-field name="photo" displayname="Upload Your Photo" show="true" primary-key="false" generator="assigned" key="photo" type="blob" widget="upload" maxchars="255"></wm-form-field>
