--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -101,7 +101,7 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn13" padding="2em unset" horizontalalign="center">
-                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManualFeeTypes.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid7">
                                 <wm-gridrow height="100%" name="gridrow11_1">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2em unset unset unset" name="gridcolumn26_1" class="col-xs-3">
