--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -64,7 +64,7 @@
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow14">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn30" horizontalalign="right">
-                                            <wm-button class="btn-default btn-primary" caption="AddEmployee" type="button" margin="unset 0.5em" name="buttonAddEmployee" iconclass="wi wi-add"></wm-button>
+                                            <wm-button class="btn-default btn-primary" caption="AddEmployee" type="button" margin="unset 0.5em" name="buttonAddEmployee" iconclass="wi wi-add" on-click="buttonAddEmployeeClick($event, $scope);Widgets.dialogAddEmployeeORAdmin.open()"></wm-button>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
@@ -102,6 +102,7 @@
                                         </wm-container>
                                     </wm-listtemplate>
                                 </wm-livelist>
+                                <wm-button class="btn-default btn-primary" caption="AddAdmin" type="button" margin="unset 0.5em" iconclass="wi wi-add" on-click="buttonAddAdminClick($event, $scope);Widgets.dialogAddEmployeeORAdmin.open()" name="buttonAddAdmin"></wm-button>
                             </wm-tabpane>
                         </wm-tabs>
                     </wm-gridcolumn>
@@ -177,27 +178,31 @@
         <wm-dialog dialogtype="design-dialog" modal="true" title="bind:&quot;Add &quot;+Variables.AdminOrEmp.dataSet.dataValue" iconclass="wi wi-edit" name="dialogAddEmployeeORAdmin">
             <wm-dialogactions name="dialogactions2">
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button4"></wm-button>
-                <wm-button class="btn-primary" caption="Save" name="button5"></wm-button>
+                <wm-button class="btn-primary" caption="Save" name="buttonRole" on-click="buttonRoleClick($event, $scope)"></wm-button>
             </wm-dialogactions>
-            <wm-form errormessage="" captionposition="top" title="" enctype="application/x-www-form-urlencoded" method="put" dataset="UpdateEmployeeORAdminRoleForMunicipality" captionalign="left" name="formMunicipalityEmployeeORAdmin">
-                <wm-layoutgrid columns="1" name="layoutgrid5">
-                    <wm-gridrow name="gridrow15">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn32">
-                            <wm-form-field name="role" displayname="Role" key="role" type="string" show="true" widget="select" inputtype="text" placeholder="Enter value"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow16">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn33">
-                            <wm-form-field name="municipality" displayname="Municipality" key="municipality" type="integer" show="true" widget="number" inputtype="number" placeholder="Enter value" defaultvalue="bind:Widgets.selectMunicipality.datavalue.ID | toNumber"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow17">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn34">
-                            <wm-form-field name="user" displayname="User" key="user" type="integer" show="true" widget="autocomplete" inputtype="number" placeholder="Enter value"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                </wm-layoutgrid>
-            </wm-form>
+            <wm-layoutgrid name="layoutgrid6">
+                <wm-gridrow name="gridrow18"></wm-gridrow>
+                <wm-gridrow name="gridrow19">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn33" padding="2em unset">
+                        <wm-composite name="composite3" required="false">
+                            <wm-label class="col-md-3 control-label" name="label8786" caption="SelectUser"></wm-label>
+                            <wm-container class="col-md-9" name="container6">
+                                <wm-search name="textSelectUser" dataset="bind:Variables.AllUsers.dataSet" searchkey="email" displaylabel="email" displayimagesrc="photo" datafield="id"></wm-search>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow20">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn35" padding="2em unset">
+                        <wm-composite name="composite4">
+                            <wm-label class="col-md-3 control-label" name="label24" caption="SelectRole"></wm-label>
+                            <wm-container class="col-md-9" name="container7">
+                                <wm-select name="textSelectRole" datavalue="bind:Variables.AdminOrEmp.dataSet.dataValue" dataset="MunicipalityEmployee,MunicipalityAdmin"></wm-select>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
         </wm-dialog>
     </wm-view>
 </wm-page>
