New files added - [ForgotPassword.js,servicedef.xml,ResetPasswordMailService.spring.xml,mail.jar,ForgotPassword.variables.json,ResetPasswordMailService.java,ForgotPassword.html,README.md,ResetPasswordMailController.java,ForgotPassword.css,ForgotPassword] Files modified - [pages-config.json,CXPasswordResetService.java,QueryExecutionController.java,cx2-queries.hbm.xml,project-services.xml,project-security-provider.xml,app.variables.json,CXPasswordResetController.java,Cx2QueryExecutorServiceImpl.java,Login.html,servicedef.xml,intercept-urls.json,pom.xml,cx2_query.json,Cx2QueryExecutorService.java] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -24,7 +24,7 @@
                                                     <wm-container class="input-group-addon" name="container4">
                                                         <wm-icon name="icon1" iconclass="wi wi-user"></wm-icon>
                                                     </wm-container>
-                                                    <wm-text placeholder="Username" name="usernametext" class="app-login-username" width="100%" autocomplete="false" autocorrect="off" autocapitalize="off" updateon="default" required="true"></wm-text>
+                                                    <wm-text placeholder="Username" name="usernametext" class="app-login-username" width="100%" autocomplete="false" autocorrect="off" autocapitalize="off" updateon="default" required="true" datavalue="sagar.vemala@wavemaker.com"></wm-text>
                                                 </wm-container>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -34,7 +34,8 @@
                                                     <wm-container class="input-group-addon" name="container6">
                                                         <wm-icon name="icon1" iconclass="wi wi-key"></wm-icon>
                                                     </wm-container>
-                                                    <wm-text type="password" name="passwordtext" placeholder="Password" class="app-login-password" width="100%" autocomplete="true" autocorrect="off" autocapitalize="off" updateon="default" required="true"></wm-text>
+                                                    <wm-text type="password" name="passwordtext" placeholder="Password" class="app-login-password" width="100%" autocomplete="true" autocorrect="off" autocapitalize="off" updateon="default" required="true"
+                                                    datavalue="civicxpress"></wm-text>
                                                 </wm-container>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -43,7 +44,7 @@
                                                 <wm-checkbox caption="Remember me" name="remembermecheck"></wm-checkbox>
                                             </wm-gridcolumn>
                                             <wm-gridcolumn columnwidth="5" name="gridcolumn15" padding="1.15em unset 1em unset" horizontalalign="right" class="col-xs-5">
-                                                <wm-anchor name="anchor1" caption="Forgot Password?"></wm-anchor>
+                                                <wm-anchor name="anchor1" caption="Forgot Password?" on-click="Variables.goToPage_ForgotPassword.invoke()"></wm-anchor>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow4">
